added production sources for NB and ON

--- a/Energy Commodity Indicators - Natural Gas - PyCon Canada - November 2019.ipynb
+++ b/Energy Commodity Indicators - Natural Gas - PyCon Canada - November 2019.ipynb
@@ -341,7 +341,15 @@
     "\n",
     "- Canada - Nova Scotia Offshore Petroleum Board - Monthly Production Summary report [(link)](http://www.cnsopb.ns.ca/offshore-activity/weekly-activity-reports);\n",
     "\n",
-    "    _Marketable Production = raw gas production * 92.5_"
+    "    _Marketable Production = raw gas production * 92.5_\n",
+    "\n",
+    "- Government of New Brunswick – Monthly Production Statistics report [(link)](http://www2.gnb.ca/content/dam/gnb/Departments/en/pdf/Minerals-Minerales/Monthly_Statistics.pdf);\n",
+    "    \n",
+    "    _Marketable Production = Natural Gas_\n",
+    "\n",
+    "- Ontario - Statistics Canada CANSIM – Supply and disposition of natural gas, monthly report [(link)](https://www150.statcan.gc.ca/t1/tbl1/en/tv.action?pid=2510005501);\n",
+    "    \n",
+    "    _Marketable Production for Ontario = Reported Data_\n"
    ]
   },
   {
